--- a/app/src/main/res/layout/fragment1.xml
+++ b/app/src/main/res/layout/fragment1.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Button xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:text="BUTTON_1">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
+    <Button
+        android:id="@+id/f1_button"
+        android:text="123"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-</Button>
+</LinearLayout>
